@@ -67,7 +67,7 @@ public class DarCollectionService {
   }
 
   public List<DarCollection> getAllCollections() {
-    return addDatasetsToCollections(darCollectionDAO.findAllDARCollections());
+    return addDatasetsToCollections(darCollectionDAO.findAllDARCollections(), List.of());
   }
 
   public List<DarCollection> getCollectionsForUserByRoleName(User user, String roleName) {
@@ -80,7 +80,7 @@ public class DarCollectionService {
           break;
         case CHAIRPERSON:
         case MEMBER:
-          collections.addAll(getCollectionsByUserDacs(user));
+          collections.addAll(getCollectionsByUserDacs(user, true));
           break;
         case SIGNINGOFFICIAL:
           collections.addAll(getCollectionsByUserInstitution(user));
@@ -102,9 +102,10 @@ public class DarCollectionService {
    * Find all DAR Collections by the user's associated DACs
    *
    * @param user The User
+   * @param filterByUserDacDatasets Specifies whether to filter on user-DAC-datasets
    * @return List<DarCollection>
    */
-  public List<DarCollection> getCollectionsByUserDacs(User user) {
+  public List<DarCollection> getCollectionsByUserDacs(User user, Boolean filterByUserDacDatasets) {
     List<Integer> dacIds = user.getRoles().stream()
         .map(UserRole::getDacId)
         .filter(Objects::nonNull)
@@ -113,8 +114,13 @@ public class DarCollectionService {
     List<Integer> collectionIds = dacIds.isEmpty() ?
         Collections.emptyList() :
         darCollectionDAO.findDARCollectionIdsByDacIds(dacIds);
+    List<Integer> userDatasetsIds = filterByUserDacDatasets ?
+        datasetDAO.findDatasetsByAuthUserEmail(user.getEmail()).stream()
+                .map(d -> d.getDataSetId())
+                .collect(Collectors.toList()) :
+        Collections.emptyList();
     if (!collectionIds.isEmpty()) {
-      return addDatasetsToCollections(darCollectionDAO.findDARCollectionByCollectionIds(collectionIds));
+      return addDatasetsToCollections(darCollectionDAO.findDARCollectionByCollectionIds(collectionIds), userDatasetsIds);
     }
     return Collections.emptyList();
   }
@@ -133,14 +139,14 @@ public class DarCollectionService {
     }
     List<Integer> collectionIds = darCollectionDAO.findDARCollectionIdsByInstitutionId(user.getInstitutionId());
     if (!collectionIds.isEmpty()) {
-      return addDatasetsToCollections(darCollectionDAO.findDARCollectionByCollectionIds(collectionIds));
+      return addDatasetsToCollections(darCollectionDAO.findDARCollectionByCollectionIds(collectionIds), List.of());
     }
     return Collections.emptyList();
   }
 
   public List<DarCollection> getCollectionsForUser(User user) {
     List<DarCollection> collections = darCollectionDAO.findDARCollectionsCreatedByUserId(user.getDacUserId());
-    return addDatasetsToCollections(collections);
+    return addDatasetsToCollections(collections, List.of());
   }
 
   /*
@@ -200,7 +206,7 @@ public class DarCollectionService {
         collections = darCollectionDAO.getFilteredListForResearcher(sortField, sortOrder, user.getDacUserId(), filterTerm);
     }
 
-    return addDatasetsToCollections(collections);
+    return addDatasetsToCollections(collections, List.of());
   }
 
   private List<Integer> getDacIdsFromUser (User user) {
@@ -243,7 +249,7 @@ public class DarCollectionService {
     if (Objects.isNull(collection)) {
       throw new NotFoundException("Collection with the reference id of " + referenceId + " was not found");
     }
-    List<DarCollection> populatedCollections = addDatasetsToCollections(Collections.singletonList(collection));
+    List<DarCollection> populatedCollections = addDatasetsToCollections(Collections.singletonList(collection), List.of());
     return populatedCollections.stream().findFirst().orElse(null);
   }
 
@@ -252,11 +258,18 @@ public class DarCollectionService {
     if (Objects.isNull(collection)) {
       throw new NotFoundException("Collection with the collection id of " + collectionId + " was not found");
     }
-    List<DarCollection> populatedCollections = addDatasetsToCollections(Collections.singletonList(collection));
+    List<DarCollection> populatedCollections = addDatasetsToCollections(Collections.singletonList(collection), List.of());
     return populatedCollections.stream().findFirst().orElse(null);
   }
 
-  public List<DarCollection> addDatasetsToCollections(List<DarCollection> collections) {
+  /**
+   * Iterate through a set of collections and add relevant datasets.
+   *
+   * @param collections  The list of DarCollections to iterate over.
+   * @param filterDatasetIds An optional list of Dataset Ids used to filter down the datasets for the collections
+   * @return List<DarCollection>
+   */
+  public List<DarCollection> addDatasetsToCollections(List<DarCollection> collections, List<Integer> filterDatasetIds) {
     List<String> reference_ids = collections.stream()
       .map(d-> d.getDars().values())
       .flatMap(Collection::stream)
@@ -264,6 +277,8 @@ public class DarCollectionService {
       .collect(Collectors.toList());
     Map<String, List<DarDataset>> referenceIdToDatasetId = dataAccessRequestDAO.findAllDARDatasets(reference_ids)
       .stream().collect(Collectors.groupingBy(DarDataset::getReferenceId));
+
+    // get datasetIds from each DAR from each collection
     List<Integer> datasetIds = collections.stream()
       .map(d-> d.getDars().values())
       .flatMap(Collection::stream)
@@ -271,8 +286,11 @@ public class DarCollectionService {
       .flatMap(Collection::stream)
       .map(DarDataset::getDatasetId)
       .collect(Collectors.toList());
-
     if(!datasetIds.isEmpty()) {
+      // if filterDatasetIds has values, get the intersection between that and datasetIds
+      if (!filterDatasetIds.isEmpty()) {
+        datasetIds.retainAll(filterDatasetIds);
+      }
       Set<Dataset> datasets = datasetDAO.findDatasetWithDataUseByIdList(datasetIds);
       Map<Integer, Dataset> datasetMap = datasets.stream()
           .collect(Collectors.toMap(Dataset::getDataSetId, Function.identity()));
@@ -284,7 +302,8 @@ public class DarCollectionService {
           .flatMap(Collection::stream)
           .map(DarDataset::getDatasetId)
           .map(datasetMap::get)
-                .collect(Collectors.toSet());
+          .filter(d -> Objects.nonNull(d)) // filtering out nulls which were getting captured by map
+          .collect(Collectors.toSet());
         DarCollection copy = c.deepCopy();
         copy.setDatasets(collectionDatasets);
         return copy;
